--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.26", features = ["derive"] }
 color-eyre = "0.6.3"
+dirs = "6.0.0"
+log = "0.4.22"
 ratatui = "0.29.0"
+simplelog = "0.12.2"
 tokio = { version = "1.43.0", features = ["full"] }
