--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 simplelog = "0.12.2"
+tiny_http = "0.12.0"
 tokio = { version = "1.43.0", features = ["full"] }
