Add Get Code Screen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 arboard = "3.4.1"
+base64 = "0.22.1"
 clap = { version = "4.5.26", features = ["derive"] }
 color-eyre = "0.6.3"
 dirs = "6.0.0"
