--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 arboard = "3.4.1"
+async-recursion = "1.1.1"
 axum = "0.8.1"
 base64 = "0.22.1"
 clap = { version = "4.5.26", features = ["derive"] }
