Add Artist Info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ clap = { version = "4.5.26", features = ["derive"] }
 color-eyre = "0.6.3"
 dirs = "6.0.0"
 log = "0.4.22"
+num-format = "0.4.4"
 open = "5.3.2"
 ratatui = "0.29.0"
 reqwest = { version = "0.12.12", features = ["json"] }
+scraper = "0.23.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 simplelog = "0.12.2"
